--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -36,11 +36,16 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: get lbp schemas and save to directory
-        run: |
-          mkdir -p schema/
-          wget -O schema/critical.rng 'https://raw.githubusercontent.com/lombardpress/lombardpress-schema/1.0.0/src/out/critical.rng'
-          wget -O schema/diplomatic.rng 'https://raw.githubusercontent.com/lombardpress/lombardpress-schema/1.0.0/src/out/diplomatic.rng'
-          wget -O schema/tdf.rng 'https://raw.githubusercontent.com/scta/tdf-schema/master/src/tdf-0.rng'
+        run: mkdir -p schema/
+      
+      - name: get critical schema
+        run: wget -O schema/critical.rng 'https://raw.githubusercontent.com/lombardpress/lombardpress-schema/1.0.0/src/out/critical.rng'
+      
+      - name: get diplomatic
+        run: wget -O schema/diplomatic.rng 'https://raw.githubusercontent.com/lombardpress/lombardpress-schema/1.0.0/src/out/diplomatic.rng'
+      
+      - name: get tdf 
+        run: wget -O schema/tdf.rng 'https://raw.githubusercontent.com/scta/tdf-schema/master/src/tdf-0.rng'
           
       # Runs check
       - name: run validation checks
